--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 numpy
 Pillow
+qrcode
 scikit-learn
-torch==1.7.1
-torchvision==0.4.0
+torch
+torchvision
 tqdm
 opencv-python==4.4.0.46
 imageio==2.9.0
